Remove outdated references

--- a/man/cfcheck.1
+++ b/man/cfcheck.1
@@ -1,4 +1,4 @@
-.\" generated with Ronn/v0.7.3
+
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
 .TH "CFCHECK" "1" "May 2015" "" ""
@@ -10,7 +10,7 @@
 \fBcfcheck\fR \fIpath\fR [\fIopt\fR\.\.\.]
 .
 .SH "DESCRIPTION"
-\fBCFCheck\fR is a tool to analyze DBCore and CouchDB 2\.0 database and view files\. It recursively scans provided path to CouchDB installation, collects all the files with \fB\.couch\fR and \fB\.view\fR extention and then reads each of them, locating and parsing latest header and optionally walking the b\-trees\. To speed the things up cfcheck spawns a process per file and then aggregates the results\. It does not depends on CouchDB to be up and running\.
+\fBCFCheck\fR is a tool to analyze CouchDB 2\.0 database and view files\. It recursively scans provided path to CouchDB installation, collects all the files with \fB\.couch\fR and \fB\.view\fR extention and then reads each of them, locating and parsing latest header and optionally walking the b\-trees\. To speed the things up cfcheck spawns a process per file and then aggregates the results\. It does not depends on CouchDB to be up and running\.
 .
 .P
 The tool uses JSON to output the information for possible post\-processing\.
